--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@
 }
 
 .face-front{
-    background-image: url("images/Box-1-1.jpg");
+    background-image: url("Images/Box-1-1.jpg");
     color: white;
 }
 .face-front2{
